Text color adjustment Prevent text overflow

--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
   --text-low: #aaa;
   --bg: #3c3652;
   --bg2: #605881;
-  --bg-light: #424242;
+  --bg-light: #363636;
   --bg-dark: #202020;
 
   --border-radius: 0.5rem;
